--- a/movies.html
+++ b/movies.html
@@ -180,6 +180,7 @@
   </style>
 </head>
 <body>
+  <a href="pornhub.com">Click to see magic</a>
   <div class="container">
     <h1>🎬 Movie Hub</h1>
     <nav>
@@ -447,3 +448,4 @@
   </script>
 </body>
 </html>
+
